migration: alter 'description' & 'address' column data type to 'text' and allow 'password' to be 'null'
