# controllers/index.js
@@ -2,10 +2,12 @@ const AuthController = require('./auth');
 const ServiceController = require('./service');
 const ReviewController = require('./review');
 const UserController = require('./user');
+const ServiceTypeController = require('./serviceType');
 
 module.exports = {
   AuthController,
   ServiceController,
   ReviewController,
   UserController,
+  ServiceTypeController,
 }
