# controllers/service.js
@@ -4,13 +4,20 @@ const { STATUS_CODES, STATUS_TEXT } = require('../helper/httpStatusCodes');
 
 module.exports = {
   getListServices: async (req, res) => {
-    const { page, show, sortBy, sortingMethod, keyword } = req.query;
+    const { 
+      page, 
+      show, 
+      sortBy, 
+      sortingMethod, 
+      keyword,
+      serviceTypeId,
+     } = req.query;
     
     try {
       const limit = show || 10;
       const offset =  show && page ? show * (page - 1 ) : 0;
 
-      const data = await ServiceServices.getListServices(limit, offset, sortBy, sortingMethod, keyword);
+      const data = await ServiceServices.getListServices(limit, offset, serviceTypeId, sortBy, sortingMethod, keyword);
       responseSuccess(res, {
         code: STATUS_CODES.OK,
         message: STATUS_TEXT[STATUS_CODES.OK],
@@ -23,8 +30,18 @@ module.exports = {
   },
   getServiceById: async (req, res) => {
     const { id } = req.params;
+    const { 
+      page, 
+      show, 
+      sortBy, 
+      sortingMethod, 
+      keyword,
+     } = req.query;
     try {
-      const data = await ServiceServices.getServiceById(id);
+      const limit = show || 10;
+      const offset =  show && page ? show * (page - 1 ) : 0;
+
+      const data = await ServiceServices.getServiceById(id, limit, offset, sortBy, sortingMethod, keyword);
       responseSuccess(res, {
         code: STATUS_CODES.OK,
         message: STATUS_TEXT[STATUS_CODES.OK],
