# controllers/user.js
@@ -5,12 +5,19 @@ const { STATUS_CODES, STATUS_TEXT } = require('../helper/httpStatusCodes');
 module.exports = {
   getReviewHistoryByUserId: async (req, res) => {
     const { id } = req.params;
-    const { page, show, sortBy, sortingMethod, keyword } = req.query;
+    const {
+      page,
+      show, 
+      sortBy,
+      sortingMethod,
+      keyword,
+      serviceId,
+    } = req.query;
     try {
       const limit = show || 10;
       const offset =  show && page ? show * (page - 1 ) : 0;
 
-      const data = await UserServices.getReviewHistoryByUserId(id, limit, offset, sortBy, sortingMethod, keyword);
+      const data = await UserServices.getReviewHistoryByUserId(id, limit, offset, sortBy, sortingMethod, keyword, serviceId);
       responseSuccess(res, {
         code: STATUS_CODES.OK,
         message: STATUS_TEXT[STATUS_CODES.OK],
