# docs/api-docs.yml
@@ -53,6 +53,10 @@ components:
         data: 
           type: object
           additionalProperties: false
+    # responseSingleReview:
+    #   type: object
+    #   properties:
+        
     responseGetListService:
       type: object
       properties:
@@ -62,10 +66,10 @@ components:
         name: 
           type: string 
           example: service 1
-        typeId:
+        serviceTypeId:
           type: integer
           example: 2
-        type:
+        serviceType:
           $ref: "#/components/schemas/detailDataServiceType"
         description:
           type: string
@@ -109,7 +113,10 @@ components:
         name: 
           type: string 
           example: service 1
-        type:
+        serviceTypeId: 
+          type: integer
+          example: 1
+        serviceType:
           $ref: "#/components/schemas/detailDataServiceType"
         description:
           type: string
@@ -145,6 +152,9 @@ components:
         id:
           type: integer
           example: 1
+        userId:
+          type: integer
+          example: 1
         user:
           $ref: "#/components/schemas/detailDataUser"
         serviceId: 
@@ -171,7 +181,7 @@ components:
         id: 
           type: integer
           example: 1
-        name:
+        username:
           type: string 
           example: Lorem
         email:
@@ -410,6 +420,12 @@ paths:
           schema:
             type: integer
             example: 10
+        - name: serviceTypeId
+          required: false
+          in: query
+          schema:
+            type: integer
+            example: 1
         - name: sortBy
           required: false
           in: query
@@ -449,6 +465,12 @@ paths:
                     type: array
                     items:
                       $ref: "#/components/schemas/responseGetListService"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/responseBadRequestError"
         '500':
           description: Internal server error
           content:
@@ -509,7 +531,21 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/requestBodyCreateService"
+              type: object
+              properties:
+                status:
+                  type: string
+                  example: Success
+                code: 
+                  type: integer
+                  example: 200
+                message:
+                  type: string
+                  example: ''
+                data: 
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/requestBodyCreateService"
       responses:
         '200':
           description: Successfully update service
@@ -552,19 +588,69 @@ paths:
           schema:
             type: integer
             example: 1
+        - name: page
+          required: false
+          in: query
+          schema:
+            type: integer
+            example: 1
+        - name: show
+          required: false
+          in: query
+          schema:
+            type: integer
+            example: 10
+        - name: sortBy
+          required: false
+          in: query
+          schema: 
+            type: string
+            example: rating
+        - name: sortingMethod
+          in: query
+          required: false
+          schema: 
+            type: string
+            example: desc
+        - name: keyword
+          in: query
+          required: false
+          schema: 
+            type: string
+            example: ''
       responses:
         '200':
           description: Successfully get service by id
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/responseGetServiceDetail"
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: Success
+                  code: 
+                    type: integer
+                    example: 200
+                  message:
+                    type: string
+                    example: ''
+                  data: 
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/responseGetServiceDetail"
         '404':
           description: Not found
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/responseNotFoundError"
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/responseBadRequestError"
         '500':
           description: Internal server error
           content:
@@ -792,12 +878,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/responseSuccessLogin"
-        '401':
-          description: Unauthorized
+        '404':
+          description: Not Found
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/responseUnauthorizedError"
+                $ref: "#/components/schemas/responseNotFoundError"
         '400':
           description: Bad Request
           content:
